page.css
/* ... */
.exemple {
  -webkit-appearance: none;
  appearance: none;
  font-family: inherit;
  font-size: .9rem;
  line-height: inherit;
  margin: 0;
  padding: .2em .6em;
  border: 1px solid rgba(255, 255, 255, .5);
  border-radius: 4px;
  background: rgba(255, 255, 255, .2);
  cursor: pointer;
  white-space: nowrap;
}
.exemple:hover {
  border-color: white;
  background: rgba(255, 255, 255, .4);
}
.exemple:focus:not(:hover) {
  outline: none;
  border-color: var(--link-color);
  box-shadow: inset 0 0 0 1px var(--link-color);
}
input {
  grid-row: 2;
  grid-column: 1 / 3;
  width: 100%;
  height: 100%;
  border: none;
  box-sizing: border-box;
  padding: .4em .6em;
  font-family: 'Open Sans';
  color: var(--text-color);
  transition: box-shadow .2s ease, color .3s ease;
  background-color: hsl(var(--user-hue), var(--user-saturation), 92%);
  border-radius: .6rem;
}

input:active, input:focus {
  background-color: hsl(var(--user-hue), var(--user-saturation), 98%);
}

::placeholder {
  color: hsl(var(--user-hue), calc(0.5 * var(--user-saturation)), 20%, .7);
}



/*
 * Aperçu de la couleur
 */

#apercu {
  grid-row: 2 / 3;
  grid-column: 1 / 3;
  background-color: #ddd;
  background-image: linear-gradient(45deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%),
                    linear-gradient(45deg, rgba(0, 0, 0, .1) 25%, transparent 25%, transparent 75%, rgba(0, 0, 0, .1) 75%);
  background-size: 4vmin 4vmin;
  background-position: 0 0, 2vmin 2vmin;
  position: relative;
  overflow: hidden;
  /*border: 1px solid black;*/
  border-radius: 1rem; /* >.6rem */
  border-top: none;
}

#apercu::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: var(--user-color);
}

.fenetre {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  border: 1.8rem solid var(--frame-color);
  position: relative;
  border-radius: .6rem 0 0 .6rem;
}

.fenetre::after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: .6rem;
  box-shadow: 0 0 0 1rem var(--frame-color);
}



/*
 * Affichage de l'objet Couleur généré
 */

#objet {
  grid-row: 2 / 3;
  grid-column: 2 / 3;
  background-color: var(--frame-color);
  position: relative;
  border-radius: 0 .6rem .6rem 0;
}

#objet>pre {
  background: none;
  padding: 0 .9rem;
  margin: .9rem auto;
}



/*
 * Affichage des formats de la couleur
 */

#donnees {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex-wrap: wrap;
  margin-left: -.6rem;
}

.format {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  margin-top: .6rem;
  margin-left: .6rem;
}

pre[class*="language-"].format-donnee {
  margin: 0;
}

.format-donnee {
  padding-left: 2rem;
}

.name:not(.oui) {
  display: none;
}



@media (max-width: 42rem) { /* Phone-like */
  .demo-conteneur {
    grid-template-columns: auto;
  }

  #saisie {
    grid-column: 1 / 2;
  }

  #apercu {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
  }

  .fenetre {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
    min-height: 8rem;
    border-width: .9rem;
    /*border-radius: .6rem .6rem 0 0;*/
    border-radius: .6rem;
  }
  .fenetre::after {
    box-shadow: 0 0 0 .7rem var(--frame-color);
  }

  #objet {
    grid-row: 3 / 4;
    grid-column: 1 / 2;
    border-radius: 0 0 .6rem .6rem;
    background: var(--frame-color);
    margin-top: -1.5rem;
    display: none;
  }
}





/*!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!! SECTION DOCUMENTATION !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!*/



/*
 * Espacement des paragraphes
 */

p {
  margin: 0 0 1em 0;
}

p, li {
  line-height: 1.6em;
}

.documentation p:last-child,
.documentation div:last-child {
  margin: 0;
}

.titre-partie-docu + p, div + p {
  margin-top: 1em;
}

li + li {
  margin-top: .6rem;
}

input + p {
  margin-bottom: 0;
}

div + p.h3,
ul + p.h3,
p + p.h3 {
  margin-top: 2.4rem;
}



/*
 * Mise en forme des liens et textes mis en avant
 */

a:link,
a:visited {
  --color: var(--link-color);
  color: var(--color);
  font-weight: 600;
}

a:hover,
a:focus,
a:active {
  background-color: var(--color);
  color: var(--section-color);
  text-decoration: none;
}

strong, em {
  color: hsl(var(--user-hue), var(--user-saturation), 20%);
  font-weight: 600;
}



/*
 * Titre de partie de documentation
 */

.titre-partie-demo,
.titre-partie-docu {
  color: var(--h3-color);
  font-family: 'Lato';
  display: block;
  position: relative;
}
.titre-partie-docu {
  margin-top: 2.4em;
}

/* Séparateur entre parties */
.titre-partie-docu::before { 
  content: '';
  display: block;
  width: 60px;
  height: 4px;
  border-radius: 6px;
  position: absolute;
  top: -1.2em;
  left: 50%;
  transform: translate(-50%, 50%);
  background: var(--h3-color);
  opacity: .15;
}



/*
 * Exemple de code avec résultat juxtaposé
 */

.example-code {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto auto;
  grid-gap: .6em;
  margin-bottom: 1em;
}

.example-code>pre[class*="language-"] {
  margin: 0;
}

.input {
  grid-column: 1 / 2;
  grid-row: 1 / 2;
}

.output {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
}


/*
 * Personnalisation de la coloration syntaxique
 */

.token.property,
.token.tag,
.token.boolean,
.token.number,
.token.constant,
.token.symbol {
  color: var(--token-number);
}

.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: var(--token-string);
}

.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string,
.token.variable {
  color: var(--token-operator);
}

.token.atrule,
.token.attr-value,
.token.keyword {
  color: var(--token-keyword);
}

.token.regex,
.token.important {
  color: #e90;
}

